@@ -273,7 +273,10 @@ static int newstate(struct mntent *mnt, int type, char *extra)
 	if (flags & FL_ALL)
 		sflags |= STATEFLAG_ALL;
 
-	if (!strcmp(mnt->mnt_type, MNTTYPE_XFS)) {	/* XFS filesystem has special handling... */
+	if (!strcmp(mnt->mnt_type, MNTTYPE_GFS2)) {
+		errstr(_("Cannot change state of GFS2 quota.\n"));
+		return 1;
+	} else if (!strcmp(mnt->mnt_type, MNTTYPE_XFS)) {	/* XFS filesystem has special handling... */
 		if (!kern_qfmt_supp(QF_XFS)) {
 			errstr(_("Cannot change state of XFS quota. It's not compiled in kernel.\n"));
 			return 1;
@@ -329,7 +332,8 @@ static int print_state(struct mntent *mnt, int type)
 {
 	int on = 0;
 
-	if (!strcmp(mnt->mnt_type, MNTTYPE_XFS)) {
+	if (!strcmp(mnt->mnt_type, MNTTYPE_XFS) ||
+	    !strcmp(mnt->mnt_type, MNTTYPE_GFS2)) {
 		if (kern_qfmt_supp(QF_XFS))
 			on = kern_quota_on(mnt->mnt_fsname, type, QF_XFS) != -1;
 	}
